--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <a href="/pages/about-us.html">About Us</a>
                     <a href="/pages/terms-of-sponsorship.html">Terms of Sponsorship</a>
                     <a href="/pages/contact-us.html">Contact Us</a>
-                    <a href="pages/terms-of-use.html">Terms of Use</a>
+                    <a href="/pages/terms-of-use.html">Terms of Use</a>
                     <a href="/pages/privacy-policy.html">Privacy Policy</a>
                     <a href="pages/faqs.html">FAQs</a>
                     <a href="/pages/funded.html">Funded</a>
