Farmer dashboard was worked on

--- a/pages/farmers/f-products.html
+++ b/pages/farmers/f-products.html
@@ -52,7 +52,7 @@
             <!-- <a href="" class="nav-item item a">Investors</a> -->
             <!-- <a href="#index.html" class="nav-item item a">Training</a>
             <a href="#index.html" class="nav-item item a">Mentorship</a> -->
-            <a href="#index.html" class="nav-item item a">FAQs</a>
+            <a href="../u-faqs.html" class="nav-item item a">FAQs</a>
             <button class=" dashb nav-item item a last">Log Out</button>
         </aside>
         <main class="main">
@@ -121,9 +121,9 @@
         </div>
         <p class="copy">Copyright&copy;2020 FarmConnect. All Rights Reserved</p>
     </footer>
-    <!-- <script>
+     <script>
         (function () {
-            if (!localStorage.getItem("farmvestUser")) {
+            if (!localStorage.getItem("farmconnectUser")) {
                 window.location.href = "../../index.html";
             } else {
                 let user = localStorage.getItem("farmdata");
@@ -133,7 +133,7 @@
                 }
             }
         })()
-    </script> -->
+    </script>
     <script src="../../js/app.js"></script>
     <script src="../../js/f-product.js"></script>
 </body>
