--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -63,7 +63,7 @@
     <section class="history">
         <h2 class="head-history">Brief History</h2>
         <div class="card">
-            <img src="https://res.cloudinary.com/josh4324/image/upload/v1590231898/founder_scsfxw.png">
+            <img src="../img/tolu.jpg">
             <div class="info">
                 <span class="inner-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem modi harum
                     doloremque necessitatibus.
@@ -76,7 +76,7 @@
         <h2 class="feature">Featured Products</h2>
         <div class="item-container">
             <div class="products-card">
-                <img src="https://res.cloudinary.com/josh4324/image/upload/v1590231909/rooster_p9h8td.png">
+                <img src="../img/rooster.png">
                 <div class="desc">
                     <h6 class="product-text">Alagbo Poultry</h6>
                     <h6 class="amount">&#8358;1 Milion</p>
@@ -90,7 +90,7 @@
                 </div>
             </div>
             <div class="products-card">
-                <img src="https://res.cloudinary.com/josh4324/image/upload/v1590231908/fish_yag5du.png">
+                <img src="../img/fish.png">
                 <div class="desc">
                     <h6 class="product-text">Express Fishery</h6>
                     <h6 class="amount">&#8358;3.2 Million</h6>
@@ -105,8 +105,8 @@
 
         <div class="test-card">
             <div class="details">
-                <img class="cauimg" src="../img/avatar-ali.png">
-                <h3 class="dname">Anisha Li</h3>
+                <img class="cauimg" src="../img/tolu.jpg">
+                <h3 class="dname">Folorunso Tolu</h3>
                 <p class="text">The idea behind FarmConnect is quite good. It has the potential to create jobs for lots
                     of people. It
                     is very easy to do business with them because everything takes place online. I would recommend them
