--- a/pages/farmers/f-dashboard.html
+++ b/pages/farmers/f-dashboard.html
@@ -51,7 +51,7 @@
             <!-- <a href="" class="nav-item item ditem a">Investors</a> -->
             <!-- <a href="#index.html" class="nav-item item a">Training</a>
             <a href="#index.html" class="nav-item item a">Mentorship</a> -->
-            <a href="#index.html" class="nav-item item ditem a">FAQs</a>
+            <a href="../u-faqs.html" class="nav-item item ditem a">FAQs</a>
             <button class=" dashb nav-item item a last">Log Out</button>
         </aside>
         <main class="main">
@@ -112,9 +112,9 @@
         </div>
         <p class="copy">Copyright&copy;2020 FarmConnect. All Rights Reserved</p>
     </footer>
-    <!-- <script>
+    <script>
         (function () {
-            if (!localStorage.getItem("farmvestUser")) {
+            if (!localStorage.getItem("farmconnectUser")) {
                 window.location.href = "../../index.html";
             }else {
                 let user = localStorage.getItem("farmdata");
@@ -124,9 +124,9 @@
                 }
             }
         })()
-    </script> -->
-    <!-- <script src="../../js/app.js"></script>
-    <script src="../../js/f-dashboard.js"></script> -->
+    </script>
+    <script src="../../js/app.js"></script>
+    <script src="../../js/f-dashboard.js"></script>
 </body>
 
 </html>
