--- a/pages/farmers/f-product-detail - new.html
+++ b/pages/farmers/f-product-detail - new.html
@@ -52,7 +52,7 @@
             <!-- <a href="" class="nav-item item a">Investors</a> -->
             <!-- <a href="#index.html" class="nav-item item a">Training</a>
             <a href="#index.html" class="nav-item item a">Mentorship</a> -->
-            <a href="#index.html" class="nav-item item a">FAQs</a>
+            <a href="../u-faqs.html" class="nav-item item a">FAQs</a>
             <button class=" dashb nav-item item a last">Log Out</button>
         </aside>
         <main class="main">
@@ -262,7 +262,7 @@
                  window.location.href = "/pages/investors/i-dashboard.html";
              }
          }
-     })
+     })()
     </script>
     <script src="../../js/app.js"></script>
     <script src="../../js/f-dashboard.js"></script>
