--- a/pages/farmers/f-product-detail.html
+++ b/pages/farmers/f-product-detail.html
@@ -53,7 +53,7 @@
             <!-- <a href="" class="nav-item item a">Investors</a> -->
             <!-- <a href="#index.html" class="nav-item item a">Training</a>
             <a href="#index.html" class="nav-item item a">Mentorship</a> -->
-            <a href="#index.html" class="nav-item item a">FAQs</a>
+            <a href="../u-faqs.html" class="nav-item item a">FAQs</a>
             <button class=" dashb nav-item item a last">Log Out</button>
         </aside>
         <main class="main">
@@ -240,7 +240,7 @@
                         window.location.href = "/pages/investors/i-dashboard.html";
                     }
                 }
-            })
+            })()
     </script>
     <script src="../../js/app.js"></script>
     <script src="../../js/f-dashboard.js"></script>
