--- a/pages/investors/i-product-detail.html
+++ b/pages/investors/i-product-detail.html
@@ -74,7 +74,7 @@
                 <div class="featured">
                     <div class="f-i-product">
                         <div class="products-card-detail">
-                            <img class="img-cont imgd" src="https://res.cloudinary.com/josh4324/image/upload/v1590231909/rooster_p9h8td.png">
+                            <img class="img-cont imgd" src="">
                             <div class="desc-detail">
                                 <div class="desc-top">
                                     <div class="desc-top-l">
@@ -209,7 +209,7 @@
         <div class="featured modala">
             <div class="f-i-product">
                 <div class="products-card-detail">
-                    <img class="img-cont" src="https://res.cloudinary.com/josh4324/image/upload/v1590231909/rooster_p9h8td.png">
+                    <img class="img-cont imgd" src="">
                     <div class="desc-detail">
                         <div class="desc-top">
                             <div class="desc-top-l">
