--- a/pages/investors/i-sign-up.html
+++ b/pages/investors/i-sign-up.html
@@ -65,6 +65,7 @@
                         <option>Investement Focus</option>
                         <option>ANIMALS</option>
                         <option>PLANTS & TREES</option>
+                        <option>CROPS</option>
                     </select>
                 </div>
 
