--- a/pages/farmers/f-product-register.html
+++ b/pages/farmers/f-product-register.html
@@ -125,6 +125,7 @@
 
         <p class="copy">Copyright&copy;2020 FarmConnect. All Rights Reserved</p>
     </footer>
+    <script src="../../js/url.js"></script>
     <script src="../../js/app.js"></script>
     <script src="../../js/product-register.js"></script>
 </body>
