--- a/pages/farmers/apply-success.html
+++ b/pages/farmers/apply-success.html
@@ -76,6 +76,7 @@
 
         <p class="copy">Copyright&copy;2020 FarmConnect. All Rights Reserved</p>
     </footer>
+    <script src="../../js/url.js"></script>
     <script src="../../js/app.js"></script>
     <script>
         //Using setTimeout to execute a function after 5 seconds.
