--- a/pages/farmers/contact.html
+++ b/pages/farmers/contact.html
@@ -118,7 +118,8 @@
             }
         })()
     </script>
-    <script src="/js/app.js"></script>
+    <script src="../../js/url.js"></script>
+    <script src="../../js/app.js"></script>
 </body>
 
 </html>
