--- a/pages/farmers/f-dashboard.html
+++ b/pages/farmers/f-dashboard.html
@@ -125,6 +125,7 @@
             }
         })()
     </script>
+    <script src="../../js/url.js"></script>
     <script src="../../js/app.js"></script>
     <script src="../../js/f-dashboard.js"></script>
 </body>
