--- a/pages/farmers/f-investors.html
+++ b/pages/farmers/f-investors.html
@@ -150,6 +150,7 @@
 
         <p class="copy">Copyright&copy;2020 FarmConnect. All Rights Reserved</p>
     </footer>
+    <script src="../../js/url.js"></script>
     <script src="js/app.js"></script>
 </body>
 
