--- a/pages/farmers/f-product-detail.html
+++ b/pages/farmers/f-product-detail.html
@@ -242,6 +242,7 @@
                 }
             })()
     </script>
+    <script src="../../js/url.js"></script>
     <script src="../../js/app.js"></script>
     <script src="../../js/f-dashboard.js"></script>
     <script src="../../js/f-product-detail.js"></script>
