--- a/pages/farmers/f-products.html
+++ b/pages/farmers/f-products.html
@@ -134,6 +134,7 @@
             }
         })()
     </script>
+    <script src="../../js/url.js"></script>
     <script src="../../js/app.js"></script>
     <script src="../../js/f-product.js"></script>
 </body>
