--- a/pages/farmers/f-profile.html
+++ b/pages/farmers/f-profile.html
@@ -157,6 +157,7 @@
              }
          })()
     </script>
+    <script src="../../js/url.js"></script>
     <script src="../../js/app.js"></script>
     <script src="../../js/f-dashboard.js"></script>
     <script src="../../js/f-profile.js"></script>
