--- a/pages/farmers/f-sign-up.html
+++ b/pages/farmers/f-sign-up.html
@@ -112,6 +112,7 @@
             }
         })()
     </script>
+    <script src="../../js/url.js"></script>
     <script src="../../js/app.js"></script>
     <script src="../../js/f-signup.js"></script>
 </body>
