--- a/pages/farmers/investors-apply.html
+++ b/pages/farmers/investors-apply.html
@@ -150,7 +150,8 @@
 
         <p class="copy">Copyright&copy;2020 FarmConnect. All Rights Reserved</p>
     </footer>
-    <script src="js/app.js"></script>
+    <script src="../../js/url.js"></script>
+    <script src="../../js/app.js"></script>
 </body>
 
 </html>
