--- a/pages/investors/contact.html
+++ b/pages/investors/contact.html
@@ -118,6 +118,7 @@
             }
         })()
     </script>
+    <script src="../../js/url.js"></script>
     <script src="/js/app.js"></script>
 </body>
 
