--- a/pages/investors/i-investors.html
+++ b/pages/investors/i-investors.html
@@ -144,6 +144,7 @@
         </div>
         <p class="copy">Copyright&copy;2020 FarmConnect. All Rights Reserved</p>
     </footer>
+    <script src="../../js/url.js"></script>
     <script src="../../js/app.js"></script>
 </body>
 </html>
