--- a/pages/investors/i-product-detail - new.html
+++ b/pages/investors/i-product-detail - new.html
@@ -309,6 +309,7 @@
              }
          })()
     </script>
+    <script src="../../js/url.js"></script>
     <script src="../../js/app.js"></script>
     <script src="../../js/i-dashboard.js"></script>
 </body>
