--- a/pages/investors/i-product-detail.html
+++ b/pages/investors/i-product-detail.html
@@ -283,6 +283,7 @@
              }
          })()
     </script>
+    <script src="../../js/url.js"></script>
     <script src="../../js/app.js"></script>
     <script src="../../js/i-dashboard.js"></script>
     <script src="../../js/i-product-detail.js"></script>
