--- a/pages/investors/i-products.html
+++ b/pages/investors/i-products.html
@@ -120,6 +120,7 @@
         </div>
         <p class="copy">Copyright&copy;2020 FarmConnect. All Rights Reserved</p>
     </footer>
+    <script src="../../js/url.js"></script>
     <script src="../../js/app.js"></script>
     <script src="../../js/i-product.js"></script>
 </body>
