--- a/pages/investors/i-profile.html
+++ b/pages/investors/i-profile.html
@@ -156,6 +156,7 @@
              }
          })
     </script>
+    <script src="../../js/url.js"></script>
     <script src="../../js/app.js"></script>
     <script src="../../js/i-profile.js"></script>
 </body>
