--- a/pages/investors/i-sign-up.html
+++ b/pages/investors/i-sign-up.html
@@ -131,6 +131,7 @@
             }
         })()
     </script>
+    <script src="../../js/url.js"></script>
     <script src="../../js/app.js"></script>
     <script src="../../js/i-sigup.js"></script>
 </body>
