--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -100,6 +100,7 @@
             }
         })()
     </script>
+    <script src="../js/url.js"></script>
     <script src="../js/app.js"></script>
     <script src="../js/signin.js"></script>
 </body>
