Payment bug fixes

--- a/pages/farmers/f-product-detail.html
+++ b/pages/farmers/f-product-detail.html
@@ -75,7 +75,7 @@
                     <div class="f-i-product">
                         <div class="products-card-detail">
                             <img class="imgd img-cont"
-                                src="https://res.cloudinary.com/josh4324/image/upload/v1590231909/rooster_p9h8td.png">
+                                src="../../img/rooster.png">
                             <div class="desc-detail">
                                 <div class="desc-top">
                                     <div class="desc-top-l">
@@ -96,7 +96,6 @@
                                         <p class="location">Duration</p>
                                         <h6 class="product-text duration">2 Weeks</h6>
                                     </div>
-
                                 </div>
                                 <div class="fund-detail">In Progress</div>
                             </div>
