--- a/pages/investors/i-dashboard.html
+++ b/pages/investors/i-dashboard.html
@@ -48,10 +48,10 @@
                 <a href="i-profile.html" class="active pitem item">Edit Profile</a>
                 <h2 class="white profile-name1"></h2>
             </div>
-            <a href="../investors/i-dashboard.html" class="nav-item item ditem a">Dashboard</a>
-            <a href="../investors/i-products.html" class="nav-item item ditem a">Products</a>
-            <a href="#index.html" class="nav-item item ditem a">Investments</a>
-            <a href="#index.html" class="nav-item item ditem a">FAQs</a>
+            <a href="./i-dashboard.html" class="nav-item item ditem a">Dashboard</a>
+            <a href="./i-products.html" class="nav-item item ditem a">Products</a>
+            <a href="./i-investors.html" class="nav-item item ditem a">Investments</a>
+            <a href="../u-faqs.html" class="nav-item item ditem a">FAQs</a>
             <button class="nav-item dashb item a last">Log Out</button>
         </aside>
         <main class="main">
