--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -52,7 +52,7 @@
                 <div class="loader none">Loading...</div>
                 <div class="error none"></div>
                 <div>
-                    <input class="input-farm" aria-label="sign in" type="submit" value="SIGN IN" id="submit" style="cursor: pointer;">
+                    <input class="input-farm submit-btn" aria-label="sign in" type="submit" value="SIGN IN" id="submit" style="cursor: pointer;">
                 </div>
                 <span class="acc">Don't have an account?<a class="red" href="../pages/sign-up-gate.html">Sign Up...</a></span>
             </form>
