--- a/pages/farmers/f-product-detail - new.html
+++ b/pages/farmers/f-product-detail - new.html
@@ -253,15 +253,15 @@
             }
         }
      (function () {
-         if (!localStorage.getItem("farmconnectUser")) {
-             window.location.href = "../../index.html";
-         }else {
-             let user = localStorage.getItem("farmdata");
-             user = JSON.parse(user);
-             if (user.role === "investor") {
-                 window.location.href = "/pages/investors/i-dashboard.html";
-             }
-         }
+         let user = localStorage.getItem("userData")
+            if (!user) {
+                window.location.href = "../../index.html";
+            }else {
+                user = JSON.parse(user);
+                if (user.role === "investor") {
+                    window.location.href = "/pages/investors/i-dashboard.html";
+                }
+            }
      })()
     </script>
     <script src="../../js/url.js"></script>
