--- a/pages/investors/i-sign-up.html
+++ b/pages/investors/i-sign-up.html
@@ -43,16 +43,16 @@
 
             <form class="form" id="ipost">
                 <div>
-                    <input type="text" class="input-farm" aria-label="fullname" placeholder="Full Name" name="fullname" id="fullname" required>
+                    <input type="text" class="input-farm" aria-label="fullname" placeholder="Full Name" name="fullname" id="fullname" >
                 </div>
                 <div>
-                    <input type="email" class="input-farm" aria-label="email" placeholder="Email" name="email" id="email1" required>
+                    <input type="email" class="input-farm" aria-label="email" placeholder="Email" name="email" id="email1" >
                 </div>
                 <div>
-                    <input type="text" class="input-farm" aria-label="Phone number" placeholder="Phone" name="phone" id="phone" required>
+                    <input type="text" class="input-farm" aria-label="Phone number" placeholder="Phone" name="phone" id="phone" >
                 </div>
                 <div>
-                    <input type="password" class="input-farm" aria-label="password" placeholder="Password" name="password" id="password" required>
+                    <input type="password" class="input-farm" aria-label="password" placeholder="Password" name="password" id="password" >
                 </div>
                 <div>
                     <input type="password" class="input-farm" aria-label="confirm password" placeholder="Confirm Password" name="confirmpassword" id="confirmpassword" >
@@ -67,7 +67,7 @@
                     <input type="text" class="input-farm" aria-label="org-hone" placeholder="Organization Phone (optional)" name="orgphone" id="orgphone">
                 </div>
                 <div>
-                    <select class="input-farm" aria-label="invest-focus" id="investfocus" required>
+                    <select class="input-farm" aria-label="invest-focus" id="investfocus" >
                         <option>Investement Focus</option>
                         <option>ANIMALS</option>
                         <option>PLANTS & TREES</option>
