--- a/pages/sign-up-gate.html
+++ b/pages/sign-up-gate.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/sign-up-gate.css">
     <title>FarmConnect | Sign Up</title>
+    <style>
+        body {
+            background-image: url(../img/bg.svg);
+            background-repeat: no-repeat;
+        }
+    </style>
 </head>
 
 <body>
@@ -29,12 +35,11 @@
             <span class="hamm"><i class="fas ham fa-bars"></i></span>
         </div>
     </header>
-    <img class="bg" src="../img/bg.svg" alt="">
     <section class="signbox">
         <h1 class="head-sign">SIGN UP AS</h1>
         <div class="buts">
-            <a href="../pages/farmers/f-sign-up.html" class="signbutton cgreen">FARMER</a>
-            <a href="../pages/investors/i-sign-up.html" class="signbutton green">INVESTOR</a>
+            <a href="../pages/farmers/f-sign-up.html" class="signbutton cgreen btn">FARMER</a>
+            <a href="../pages/investors/i-sign-up.html" class="signbutton green btn">INVESTOR</a>
         </div>
         <span class="account cgreen">Already have an account?<a class="red" href="../pages/sign-in.html">Sign
                 In...</a></span>
@@ -72,8 +77,6 @@
 
             </div>
         </div>
-
-
         <p class="copy">Copyright&copy;2020 FarmConnect. All Rights Reserved</p>
     </footer>
     <script>
