--- a/index.html
+++ b/index.html
@@ -156,18 +156,18 @@
         <p class="copy">Copyright&copy;2020 FarmConnect. All Rights Reserved</p>
     </footer>
     <script>
-        (function () {
-            if (localStorage.getItem("farmconnectUser")) {
-                let user = localStorage.getItem("farmdata");
-                user = JSON.parse(user);
-                if (user.role === "farmer") {
+        let user = localStorage.getItem("userData")
+        if (user) {
+            user = JSON.parse(user);
+            if (user.role === "farmer") {
                     window.location.href = "/pages/farmers/f-dashboard.html";
                 } else {
                     window.location.href = "/pages/investors/i-dashboard.html";
                 }
             }
-        })()
+
     </script>
+
     <script src="js/app.js"></script>
 </body>
 
