--- a/pages/farmers/f-dashboard.html
+++ b/pages/farmers/f-dashboard.html
@@ -113,17 +113,15 @@
         <p class="copy">Copyright&copy;2020 FarmConnect. All Rights Reserved</p>
     </footer>
     <script>
-        (function () {
-            if (!localStorage.getItem("farmconnectUser")) {
+       let user = localStorage.getItem("userData")
+            if (!user) {
                 window.location.href = "../../index.html";
             }else {
-                let user = localStorage.getItem("farmdata");
                 user = JSON.parse(user);
                 if (user.role === "investor") {
                     window.location.href = "/pages/investors/i-dashboard.html";
                 }
             }
-        })()
     </script>
     <script src="../../js/url.js"></script>
     <script src="../../js/app.js"></script>
