--- a/pages/farmers/f-product-register.html
+++ b/pages/farmers/f-product-register.html
@@ -12,6 +12,12 @@
     <link rel="stylesheet" href="../../css/f-product-register.css">
 
     <title>FarmConnect | Product Register</title>
+    <style>
+        body {
+            background-image: url(../../img/bg.svg);
+            background-repeat: no-repeat;
+        }
+    </style>
 </head>
 
 <body>
@@ -31,7 +37,6 @@
             <span class="hamm"><i class="fas ham fa-bars"></i></span>
         </div>
     </header>
-    <img class="bg1" src="../../img/bg.svg" alt="">
     <section class="signupbox">
 
         <div class="formbox">
@@ -73,15 +78,15 @@
                 </div>
 
                 <div>
-                    <input type="checkbox" class="input-check"><span class="agree">By clicking ‘Register’, you agree to
+                    <input type="checkbox" name="check" value="checked" class="input-check"><span class="agree">By clicking ‘Register’, you agree to
                         Farmvest’s <span class="terms">Terms of Use , Sponsorship and Privacy Policy</span></span>
                 </div>
 
                 <div class="loader none">Loading...</div>
-                <div class="error none"></div>
+                <div class="error none" style="text-align: center; margin-top: 10px; color: red">lfkfefle</div>
 
                 <div>
-                    <input class="input-farm" disabled aria-label="register" type="submit" value="REGISTER" id="register">
+                    <input class="input-farm btn" aria-label="register" type="submit" value="REGISTER" id="register">
                 </div>
             </form>
         </div>
@@ -125,6 +130,7 @@
 
         <p class="copy">Copyright&copy;2020 FarmConnect. All Rights Reserved</p>
     </footer>
+    <div id="snackbar"></div>
     <script src="../../js/url.js"></script>
     <script src="../../js/app.js"></script>
     <script src="../../js/product-register.js"></script>
