--- a/pages/investors/i-dashboard.html
+++ b/pages/investors/i-dashboard.html
@@ -112,18 +112,17 @@
         </div>
         <p class="copy">Copyright&copy;2020 FarmConnect. All Rights Reserved</p>
     </footer>
+    <div id="snackbar"></div>
     <script>
-        (function () {
-            if (!localStorage.getItem("farmconnectUser")) {
+        let user = localStorage.getItem("userData")
+            if (!user) {
                 window.location.href = "../../index.html";
-            } else {
-                let user = localStorage.getItem("farmdata");
+            }else {
                 user = JSON.parse(user);
                 if (user.role === "farmer") {
                     window.location.href = "/pages/farmers/f-dashboard.html";
                 }
             }
-        })()
     </script>
     <script src="../../js/url.js"></script>
     <script src="../../js/app.js"></script>
