--- a/pages/investors/i-profile.html
+++ b/pages/investors/i-profile.html
@@ -68,6 +68,9 @@
                 <!-- <div href="" class="filter-text sect">Personal Details</div> -->
                 <div class="form-input">
                     <div>
+                        <img src="../../img/profile-img.svg" id="profileImg" class="profile-img" alt="" style="height: 100px;width:100px; border-radius: 50%;border: 3px solid #ccc">
+                    </div>
+                    <div>
                         <label for="">Full Name</label>
                         <input type="text" class="input-farm" aria-label="farm-name" placeholder="Full Name" name="farm-name" id="name" required>
                     </div>
@@ -102,7 +105,7 @@
                 <div class="error none"></div>
 
                 <div>
-                    <input class="input-farm" aria-label="register" type="submit" value="Update" id="register">
+                    <input class="input-farm btn" aria-label="register" type="submit" value="Update" id="register">
                 </div>
             </form>
 
@@ -143,6 +146,7 @@
         </div>
         <p class="copy">Copyright&copy;2020 FarmConnect. All Rights Reserved</p>
     </footer>
+    <div id="snackbar"></div>
     <script>
          (function () {
              if (!localStorage.getItem("farmconnectUser")) {
