--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -61,7 +61,7 @@
                 <hr>
                 <div class="contact-social">
                     <h3>Find Us</h3><br>
-                    <div style="overflow:hidden;max-width:100%;width:500px;height:500px;"><div id="gmapcanvas" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=lagos&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="embeddedmap-code" href="https://www.embed-map.com" id="authmaps-data">https://www.embed-map.com</a><style>#gmapcanvas img.text-marker{max-width:none!important;background:none!important;}img{max-width:none}</style></div>
+                    <div style="overflow:hidden;max-width:100%;width:500px;height:500px;"><div id="gmapcanvas" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=ekiti&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="embeddedmap-code" href="https://www.embed-map.com" id="authmaps-data">https://www.embed-map.com</a><style>#gmapcanvas img.text-marker{max-width:none!important;background:none!important;}img{max-width:none}</style></div>
 
                 </div>
             </div>
