--- a/pages/investors/i-product-detail.html
+++ b/pages/investors/i-product-detail.html
@@ -155,7 +155,7 @@
         <div class="featured">
             <div class="f-i-product">
                 <div class="products-card-detail">
-                    <img src="https://res.cloudinary.com/josh4324/image/upload/v1590231909/rooster_p9h8td.png">
+                       <img src="../../img/rooster.png">
                     <div class="desc-detail">
                         <div class="desc-top">
                             <div class="desc-top-l">
