--- a/pages/investors/i-profile.html
+++ b/pages/investors/i-profile.html
@@ -67,8 +67,9 @@
             <form class="form" id="profileid">
                 <!-- <div href="" class="filter-text sect">Personal Details</div> -->
                 <div class="form-input">
-                    <div>
+                    <div style="position: relative;">
                         <img src="../../img/profile-img.svg" id="profileImg" class="profile-img" alt="" style="height: 100px;width:100px; border-radius: 50%;border: 3px solid #ccc">
+                        <span style="font-size: 30px; cursor: pointer; position: absolute; bottom:0; right: 10px;">+</span>
                     </div>
                     <div>
                         <label for="">Full Name</label>
